<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompassActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1.0"
        android:background="@color/colorPrimaryDark"
        android:longClickable="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:maxButtonHeight="56dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/compass_composite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/compass_mode_panel"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false">

        <ImageView
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="false"
            android:scaleType="fitCenter"
            android:contentDescription="@string/content_view_line"
            android:src="@drawable/ic_view_line"
            android:tint="@android:color/darker_gray"
            android:alpha="0.3" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/compass_rotating"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="false">

            <ImageView
                android:id="@+id/compass_face"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/content_compass_display"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_compass_face"
                android:tint="@android:color/darker_gray" />

            <ImageView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_sun_position"
                android:tooltipText="@string/content_sun_position"
                android:src="@drawable/ic_solid_dot"
                android:tint="@color/sun_yellow"
                app:layout_constraintCircle="@+id/compass_face"
                app:layout_constraintCircleAngle="0"
                app:layout_constraintCircleRadius="45dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/rise"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_sunrise_position"
                android:tooltipText="@string/content_sunrise_position"
                android:src="@drawable/ic_sol_symbol"
                android:tint="@color/bg_rise"
                app:layout_constraintCircle="@+id/compass_face"
                app:layout_constraintCircleAngle="30"
                app:layout_constraintCircleRadius="45dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/noon"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_noon_position"
                android:tooltipText="@string/content_noon_position"
                android:src="@drawable/ic_sol_symbol"
                android:tint="@color/bg_noon"
                app:layout_constraintCircle="@+id/compass_face"
                app:layout_constraintCircleAngle="60"
                app:layout_constraintCircleRadius="45dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/set"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_sunset_position"
                android:tooltipText="@string/content_sunset_position"
                android:src="@drawable/ic_sol_symbol"
                android:tint="@color/bg_set"
                app:layout_constraintCircle="@+id/compass_face"
                app:layout_constraintCircleAngle="90"
                app:layout_constraintCircleRadius="45dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/nadir"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/content_midnight_position"
                android:tooltipText="@string/content_midnight_position"
                android:src="@drawable/ic_sol_symbol"
                android:tint="@color/bg_nadir"
                app:layout_constraintCircle="@+id/compass_face"
                app:layout_constraintCircleAngle="120"
                app:layout_constraintCircleRadius="45dp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.1"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/compass_mode_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/lock_compass_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/darker_gray"
            android:checked="false"
            android:onClick="onCheckboxClicked"
            android:text="@string/control_lock_compass"
            android:textColor="@android:color/darker_gray"
            tools:text="Lock compass" />

    </LinearLayout>
</RelativeLayout>
